@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-08-17T16:07:58Z",
-  "count_outdated" : 1460,
-  "uniques_outdated" : 543,
+  "timestamp" : "2023-08-18T08:08:15Z",
+  "count_outdated" : 1461,
+  "uniques_outdated" : 544,
   "count" : 1564,
   "uniques" : 564,
   "views" : [
-    {
-      "timestamp": "2023-08-04T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-08-06T00:00:00Z",
       "count": 2,
