@@ -1,12 +1,7 @@
 {
-  "count": 104,
+  "count": 103,
   "uniques": 17,
   "views": [
-    {
-      "timestamp": "2023-08-04T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2023-08-06T00:00:00Z",
       "count": 2,
